--- a/_includes/news.liquid
+++ b/_includes/news.liquid
@@ -1,4 +1,5 @@
-<div class="news">
+<h2 class="page-title">News</h2>
+  <div class="news">
   {% if site.news != blank %}
     {% assign news_size = site.news | size %}
     <div
